--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<title></title>
 </head>
 <body>
-
+	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/151w1FgRZfnKZA9FEcg9Z3?utm_source=generator&theme=0" width="30%" height="102" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </body>
 </html>
