--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="estilo.css">
 	<title></title>
 </head>
 <body>
-	<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/151w1FgRZfnKZA9FEcg9Z3?utm_source=generator&theme=0" width="30%" height="102" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+	<header>
+		<nav>
+			<div>
+				<a href=""><img id="logo-nav" src="img/TaylorSwiftBrasil.png"></a>
+			</div>
+			<div class="a-menu">
+				<a href="#">HOME</a>
+				<a href="#">BIOGRAFIA</a>
+				<a href="#">ERAS</a>
+				<a href="#">CADASTRO</a>
+			</div>
+		</nav>
+	</header>
 </body>
 </html>
