--- a/index.html
+++ b/index.html
@@ -20,5 +20,25 @@
 			</div>
 		</nav>
 	</header>
+		<aside class="not" >
+			<h2 id="not-titulo">Últimas Notícias</h2>
+				<div><img id="not-img" src="img/img-noticia1.png"></div>
+				<div><p id="not-text">25/06 Primeira noite da The Eras Tour em Minneapolis tem agradecimento de Taylor e música surpresa do Lover.</p></div>
+				<div><img id="not-img" src="img/img-noticia2.png"></div>
+				<div><p id="not-text">10/05 A última noite em Detroit nos deixou apenas mais 3 músicas do 1989 que ainda não foram tocadas – saiba tudo o que rolou!</p></div>
+				<div><img id="not-img" src="img/img-noticia3.png"></div>
+				<div><p id="not-text">17/06 The Eras Tour em Pittsburgh – Cruel Summer em “a volta dos que não foram” e homenagem de Taylor ao seu pai</p></div>
+
+		</aside>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
