atualização pagina home

--- a/index.html
+++ b/index.html
@@ -8,37 +8,60 @@
 </head>
 <body>
 	<header>
-		<nav>
+		<nav id="nav-topo">
 			<div>
 				<a href=""><img id="logo-nav" src="img/TaylorSwiftBrasil.png"></a>
 			</div>
 			<div class="a-menu">
-				<a href="#">HOME</a>
-				<a href="#">BIOGRAFIA</a>
-				<a href="#">ERAS</a>
-				<a href="#">CADASTRO</a>
+				<a class="a-menu" href="#">HOME</a>
+				<a class="a-menu" href="#">BIOGRAFIA</a>
+				<a class="a-menu" href="#">ERAS</a>
+				<a class="a-menu" href="#">CADASTRO</a>
 			</div>
 		</nav>
 	</header>
 		<aside class="not" >
 			<h2 id="not-titulo">Últimas Notícias</h2>
+			<div class="card-not">
 				<div><img id="not-img" src="img/img-noticia1.png"></div>
 				<div><p id="not-text">25/06 Primeira noite da The Eras Tour em Minneapolis tem agradecimento de Taylor e música surpresa do Lover.</p></div>
+			</div>
+			<div class="card-not">
 				<div><img id="not-img" src="img/img-noticia2.png"></div>
 				<div><p id="not-text">10/05 A última noite em Detroit nos deixou apenas mais 3 músicas do 1989 que ainda não foram tocadas – saiba tudo o que rolou!</p></div>
+			</div>
+			<div class="card-not">
 				<div><img id="not-img" src="img/img-noticia3.png"></div>
 				<div><p id="not-text">17/06 The Eras Tour em Pittsburgh – Cruel Summer em “a volta dos que não foram” e homenagem de Taylor ao seu pai</p></div>
+			</div>
+
+				<p>Clique aqui se deseja receber notícias da cantora pelo seu e-mail!</p>
 
 		</aside>
 
+		<main>
+			<h1>Seja bem-vindo ao Taylor Swift Brasil</h1>
+
+			<h2>Texto de apresentação e links de playlists</h2>
+
+
+			<p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
+
+		</main>
+
+		<nav id="nav-banner">
+			<h1>The Eras Tour no Brasil!!</h1>
+			<img id="img-banner" src="img/banner-TheErasNOBG.png">
+		</nav>
 
 
 
 
 
 
-
-
+	<footer>
+      <p>Desenvolvido por <a href="https://www.instagram.com/whoisthais/" target="_blank">Thaís Silva - </a><a href="https://www.instagram.com/maviurias/" target="_blank"> Maria Vitória - </a><a href="https://www.instagram.com/laliahaidaras" target="_blank"> Lalia Haidara</a> - 2023 </p>
+    </footer>
 
 </body>
 </html>
