--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="a-menu">
 				<a class="a-menu" href="#">HOME</a>
 				<a class="a-menu" href="#">BIOGRAFIA</a>
-				<a class="a-menu" href="#">ERAS</a>
+				<a class="a-menu" href="eras.html">ERAS</a>
 				<a class="a-menu" href="#">CADASTRO</a>
 			</div>
 		</nav>
@@ -45,12 +45,22 @@
 			<h2>Texto de apresentação e links de playlists</h2>
 
 
-			<p>texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto texto </p>
+			<p>Bem-vindo(a) ao Taylor Swift Brasil, o maior portal de notícias para os fãs brasileiros da Taylor Swift! Aqui, você encontrará o melhor conteúdo sobre a cantora e compositora, desde notícias, informações sobre seus álbuns e regravações e até análises musicais.</p>
+			<p>Tenha acesso a atualizações regulares sobre os projetos e lançamentos mais recentes da artista, incluindo álbuns, singles e videoclipes. Fique por dentro de suas turnês, performances ao vivo e eventos especiais, explore nossa seção de eras, onde pessoalmente entramos em detalhes sobre as letras inspiradoras de Taylor e exploramos as camadas emocionais de suas canções. Seja você um Swiftie de longa data ou alguém que acabou de se encantar pela música de Taylor, é
+bem-vindo(a) na nossa comunidade!</p>
+
+
+		<div id="card-musicas-main">
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/5AEDGbliTTfjOB8TSm1sxt?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+
+			<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lS1y25WAhcqJDATJK70Mq?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		</div>
 
 		</main>
 
 		<nav id="nav-banner">
-			<h1>The Eras Tour no Brasil!!</h1>
+			<h1 id="texto-TheEras">The Eras Tour no Brasil!!</h1>
 			<img id="img-banner" src="img/banner-TheErasNOBG.png">
 		</nav>
 
