--- a/eras.html
+++ b/eras.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="estiloEras.css">
-	<title></title>
+	<title>Taylor Swift Brasil</title>
 </head>
 <body>
 	<header>
@@ -14,11 +14,12 @@
 			</div>
 			<div class="a-menu">
 				<a class="a-menu" href="index.html">HOME</a>
-				<a class="a-menu" href="#">BIOGRAFIA</a>
+				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="#">ERAS</a>
 				<a class="a-menu" href="#">CADASTRO</a>
 			</div>
 		</nav>
+	</header>
 
 		<h1>CONHEÇA AS ERAS DE TAYLOR</h1>
 
