--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
-	<title></title>
+	<title>Taylor Swift Brasil</title>
 </head>
 <body>
 	<header>
@@ -14,7 +14,7 @@
 			</div>
 			<div class="a-menu">
 				<a class="a-menu" href="#">HOME</a>
-				<a class="a-menu" href="#">BIOGRAFIA</a>
+				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
 				<a class="a-menu" href="#">CADASTRO</a>
 			</div>
