--- a/biografia.html
+++ b/biografia.html
@@ -23,6 +23,10 @@
 
 
 		<main>
+
+			<h1>Biografia</h1>
+
+
 			<p>Taylor Swift, nascida em 13 de dezembro de 1989, é uma cantora, compositora e atriz norte-americana. Ela se tornou uma das artistas mais populares e bem-sucedidas da indústria musical, recebendo inúmeros prêmios e estabelecendo recordes ao longo de sua carreira.
 			Taylor Alison Swift nasceu em Reading, uma pequena cidade localizada no estado da Pensilvânia, nos Estados Unidos. Desde criança, ela demonstrou interesse pela música, e aos 14 anos, ela se mudou para Nashville, Tennessee, para seguir sua paixão pela música country. Swift começou a tocar em casas de shows locais e festivais, desenvolvendo suas habilidades de composição e performance.</p>
 			<p>Em 2006, Taylor Swift assinou seu primeiro contrato com a gravadora Big Machine Records e lançou seu álbum de estreia homônimo no mesmo ano. O álbum foi um sucesso comercial, com singles como "Tim McGraw", "Teardrops on My Guitar" e "Our Song" alcançando as paradas de sucesso. Ela ganhou destaque na música country e se tornou a artista mais jovem a escrever e cantar uma música número um na parada country da Billboard.</p>
@@ -34,6 +38,11 @@
 
 
 			</main>
+			<nav>
+			<div>
+				<img id="img-biografia" src="img/img-biografia.png">
+			</div>
+			</nav>
 
 
 
@@ -41,6 +50,10 @@
 
 
 
+
+	<footer>
+      <p>Desenvolvido por <a href="https://www.instagram.com/whoisthais/" target="_blank">Thaís Silva - </a><a href="https://www.instagram.com/maviurias/" target="_blank"> Maria Vitória - </a><a href="https://www.instagram.com/laliahaidaras" target="_blank"> Lalia Haidara</a> - 2023 </p>
+    </footer>
 
 </body>
 </html>
