--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
 
 			<p>Bem-vindo(a) ao Taylor Swift Brasil, o maior portal de notícias para os fãs brasileiros da Taylor Swift! Aqui, você encontrará o melhor conteúdo sobre a cantora e compositora, desde notícias, informações sobre seus álbuns e regravações e até análises musicais.</p>
-			<p>Tenha acesso a atualizações regulares sobre os projetos e lançamentos mais recentes da artista, incluindo álbuns, singles e videoclipes. Fique por dentro de suas turnês, performances ao vivo e eventos especiais, explore nossa seção de eras, onde pessoalmente entramos em detalhes sobre as letras inspiradoras de Taylor e exploramos as camadas emocionais de suas canções. Seja você um Swiftie de longa data ou alguém que acabou de se encantar pela música de Taylor, é
-bem-vindo(a) na nossa comunidade!</p>
+			<p>Tenha acesso a atualizações regulares sobre os projetos e lançamentos mais recentes da artista, incluindo álbuns, singles e videoclipes. Fique por dentro de suas turnês, performances ao vivo e eventos especiais, explore nossa seção de eras, onde pessoalmente entramos em detalhes sobre as letras inspiradoras de Taylor e exploramos as camadas emocionais de suas canções. Seja você um Swiftie de longa data ou alguém que acabou de se encantar pela música de Taylor, é bem-vindo(a) na nossa comunidade!</p>
 
 
 		<div id="card-musicas-main">
@@ -61,7 +60,10 @@ bem-vindo(a) na nossa comunidade!</p>
 
 		<nav id="nav-banner">
 			<h1 id="texto-TheEras">The Eras Tour no Brasil!!</h1>
-			<img id="img-banner" src="img/banner-TheErasNOBG.png">
+			<nav id="img-banner">
+				<img id="img-banner" src="img/banner-TheErasNOBG.png">
+				<button id="botao-banner"><a href="https://www.taylorswift.com/" target="_blank">Clique aqui para ir para o site oficial</a></button>
+			</nav>
 		</nav>
 
 
