alterações nos links

--- a/biografia.html
+++ b/biografia.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="index.html">HOME</a>
 				<a class="a-menu" href="#">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="#">CADASTRO</a>
+				<a class="a-menu" href="contato.html">CADASTRO</a>
 			</div>
 		</nav>
 	</header>
