--- a/contato.html
+++ b/contato.html
@@ -13,10 +13,10 @@
 				<a href=""><img id="logo-nav" src="img/TaylorSwiftBrasil.png"></a>
 			</div>
 			<div class="a-menu">
-				<a class="a-menu" href="#">HOME</a>
+				<a class="a-menu" href="index.html">HOME</a>
 				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="contato.html">CADASTRO</a>
+				<a class="a-menu" href="#">CADASTRO</a>
 			</div>
 		</nav>
 	</header>
