--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="#">HOME</a>
 				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="#">CADASTRO</a>
+				<a class="a-menu" href="contato.html">CADASTRO</a>
 			</div>
 		</nav>
 	</header>
