--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div><p id="not-text">17/06 The Eras Tour em Pittsburgh – Cruel Summer em “a volta dos que não foram” e homenagem de Taylor ao seu pai</p></div>
 			</div>
 
-				<p>Clique aqui se deseja receber notícias da cantora pelo seu e-mail!</p>
+				<button id="botao-noticia"><a href="contato.html" target="_blank">Clique aqui para receber notícias pelo seu e-mail</a></button>
 
 		</aside>
 
