--- a/eras.html
+++ b/eras.html
@@ -24,7 +24,7 @@
 		<h1>CONHEÇA AS ERAS DE TAYLOR</h1>
 
 
-		<p>TEXTO</p>
+		<p>Clique em uma era para saber mais!</p>
 
 
 
@@ -331,7 +331,10 @@
 
 		</main>
 	</header>
-
+	<a href="#" class="botao flutuante"><i class="icon icon-book-1"></i> Leia mais</a> 
+<a href="#" class="botao flutuante"><i class="icon icon-pencil-1"></i> Publicar</a>
+<a href="#" class="botao flutuante"><i class="icon icon-trashcan"></i> Deletar</a> 
+<a href="#" class="botao flutuante"><i class="icon icon-upload"></i> Upload</a> 
 
 
 	<footer>
