--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<main>
 			<h1>Seja bem-vindo ao Taylor Swift Brasil</h1>
 
-			<h2>Texto de apresentação e links de playlists</h2>
+			<h2>Apresentação</h2>
 
 
 			<p>Bem-vindo(a) ao Taylor Swift Brasil, o maior portal de notícias para os fãs brasileiros da Taylor Swift! Aqui, você encontrará o melhor conteúdo sobre a cantora e compositora, desde notícias, informações sobre seus álbuns e regravações e até análises musicais.</p>
