--- a/eras.html
+++ b/eras.html
@@ -21,14 +21,15 @@
 		</nav>
 	</header>
 
-		<h1>CONHEÇA AS ERAS DE TAYLOR</h1>
+	<main>
+
+		<h1 class="inicio-eras">CONHEÇA AS ERAS DE TAYLOR</h1>
 
 
-		<p>Clique em uma era para saber mais!</p>
+		<p id="clique-eras" class="inicio-eras">Clique em uma era para saber mais!</p>
 
 
 
-		<main>
 			<div class="nav-eras">
 				<div class="container">
 					<a class="a-menu" href="#pag-TaylorSwift">
@@ -38,7 +39,7 @@
 				        <img class="subtitulo" src="img/TaylorSwift-font.png">
 				       </div>
 				       </a>
-				        	<div class="text-card">
+				        	<div class="datas">
 				        		<p class="text-card">24 de outubro de 2006</p>
 				        	</div>
 				      </div>
@@ -49,7 +50,7 @@
 				        <img class="subtitulo" src="img/fearless-font.png">
 				       </div>
 				       </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">11 de novembro de 2008</p>
 				        	</div>
 				      </div>
@@ -60,7 +61,7 @@
 				        <img class="subtitulo" src="img/SpeakNow-font.png">
 				       </div>
 				        </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">25 de outubro de 2010</p>
 				        	</div>
 				      </div>
@@ -75,7 +76,7 @@
 				        <img class="subtitulo" src="img/red-font.png">
 				       </div>
 				     </a>
-				        	<div class="text-card">
+				        	<div class="datas">
 				        		<p class="text-card">22 de outubro de 2012</p>
 				        	</div>
 				      </div>
@@ -86,8 +87,8 @@
 				        <img class="subtitulo" src="img/1989-font.png">
 				       </div>
 				      </a>
-				         	<div id="texto-1989" class="text-card">
-				        		<p>27 de outubro de 2014</p>
+				         	<div id="texto-1989" class="datas">
+				        		<p class="text-card">27 de outubro de 2014</p>
 				        	</div>
 				      </div>
 				      <a class="a-menu" href="#pag-reputation">
@@ -97,7 +98,7 @@
 				        <img class="subtitulo" src="img/reputation-font.png">
 				       </div>
 				      </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">10 de novembro de 2017</p>
 				        	</div>
 				      </div>
@@ -111,8 +112,8 @@
 				        <img class="subtitulo" src="img/lover-font.png">
 				       </div>
 				      </a>
-				        	<div id="texto-lover" class="text-card">
-				        		<p>23 de agosto de 2019</p>
+				        	<div id="texto-lover" class="datas">
+				        		<p class="text-card">23 de agosto de 2019</p>
 				        	</div>
 				      </div>
 				      <a class="a-menu" href="#pag-evermore">
@@ -122,7 +123,7 @@
 				        <img class="subtitulo" src="img/evermore-font.png">
 				       </div>
 				      </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">24 de julho de 2020</p>
 				        	</div>
 				      </div>
@@ -133,7 +134,7 @@
 				        <img class="subtitulo" src="img/folklore-font.png">
 				       </div>
 				      </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">11 de dezembro de 2020</p>
 				        	</div>
 				      </div>
@@ -148,7 +149,7 @@
 				       </div>
 				      </a>
 
-				        	<div class="text-card">
+				        	<div class="datas">
 				        		<p class="text-card">09 de abril de 2021</p>
 				        	</div>
 				      </div>
@@ -159,7 +160,7 @@
 				        <img class="subtitulo" src="img/red-tv-font.png">
 				       </div>
 				      </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">12 de novembro de 2021</p>
 				        	</div>
 				      </div>
@@ -170,7 +171,7 @@
 				        <img  class="subtitulo" src="img/midnights-font.png">
 				       </div>
 				      </a>
-				         	<div class="text-card">
+				         	<div class="datas">
 				        		<p class="text-card">21 de outubro de 2022</p>
 				        	</div>
 				      </div>
@@ -179,7 +180,7 @@
 
 			</div>
  
-    	<h1>Conceito de cada Álbum</h1>
+    	<h1 class="inicio-eras">Conceito de cada álbum</h1>
 
     	<section id="pag-TaylorSwift" >
 				
