adiçaõ de fonte

--- a/eras.html
+++ b/eras.html
@@ -24,7 +24,7 @@
 		<h1>CONHEÇA AS ERAS DE TAYLOR</h1>
 
 
-		<p>Clique em uma era para saber mais!</p>
+		<p id="apre">Clique em uma era para saber mais!</p>
 
 
 
