--- a/eras.html
+++ b/eras.html
@@ -10,7 +10,7 @@
 	<header>
 		<nav id="nav-topo">
 			<div>
-				<a href=""><img id="logo-nav" src="img/TaylorSwiftBrasil.png"></a>
+				<a href="index.html"><img id="logo-nav" src="img/TaylorSwiftBrasil.png"></a>
 			</div>
 			<div class="a-menu">
 				<a class="a-menu" href="index.html">HOME</a>
