mudanças + ainda tem trem pra mudar

--- a/eras.html
+++ b/eras.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="index.html">HOME</a>
 				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="#">ERAS</a>
-				<a class="a-menu" href="contato.html">CADASTRO</a>
+				<a class="a-menu" href="contato.html">NEWSLETTER</a>
 			</div>
 		</nav>
 	</header>
