--- a/biografia.html
+++ b/biografia.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="index.html">HOME</a>
 				<a class="a-menu" href="#">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="contato.html">CADASTRO</a>
+				<a class="a-menu" href="contato.html">NEWSLETTER</a>
 			</div>
 		</nav>
 	</header>
@@ -28,9 +28,13 @@
 					<h1>Biografia</h1>
 
 					<div id="texto-bio">
+						<h2>Infância</h2>
 						<p>Taylor Swift, nascida em 13 de dezembro de 1989, é uma cantora, compositora e atriz norte-americana. Ela se tornou uma das artistas mais populares e bem-sucedidas da indústria musical, recebendo inúmeros prêmios e estabelecendo recordes ao longo de sua carreira.
 						Taylor Alison Swift nasceu em Reading, uma pequena cidade localizada no estado da Pensilvânia, nos Estados Unidos. Desde criança, ela demonstrou interesse pela música, e aos 14 anos, ela se mudou para Nashville, Tennessee, para seguir sua paixão pela música country. Swift começou a tocar em casas de shows locais e festivais, desenvolvendo suas habilidades de composição e performance.</p>
+
+						<h2>Início de carreira</h2>
 						<p>Em 2006, Taylor Swift assinou seu primeiro contrato com a gravadora Big Machine Records e lançou seu álbum de estreia homônimo no mesmo ano. O álbum foi um sucesso comercial, com singles como "Tim McGraw", "Teardrops on My Guitar" e "Our Song" alcançando as paradas de sucesso. Ela ganhou destaque na música country e se tornou a artista mais jovem a escrever e cantar uma música número um na parada country da Billboard.</p>
+						<h2>Grandes sucessos</h2>
 						<p>Em 2008, Swift lançou seu segundo álbum, intitulado "Fearless". O álbum foi um enorme sucesso, alcançando o topo das paradas de música country e pop. Hits como "Love Story", "You Belong with Me" e "Fifteen" ajudaram a solidificar sua posição como uma das maiores estrelas da música na época. "Fearless" recebeu vários prêmios, incluindo o Grammy de Álbum do Ano, tornando Swift a artista mais jovem a conquistar esse feito.</p>
 						<p>Ao longo dos anos seguintes, Taylor Swift lançou uma série de álbuns de sucesso, explorando diferentes estilos musicais e expandindo seu público. "Speak Now" (2010), "Red" (2012), "1989" (2014), "Reputation" (2017) e "Lover" (2019) continuaram a acumular hits e a receber reconhecimento da crítica.</p>
 						<p>Em 2020, Swift surpreendeu seus fãs ao lançar dois álbuns de estúdio: "Folklore" e "Evermore". Esses projetos foram uma mudança significativa em seu estilo musical, apresentando um som mais indie e introspectivo. Ambos os álbuns foram aclamados pela crítica e receberam várias indicações e prêmios, incluindo o Grammy de Álbum do Ano para "Folklore".</p>
