--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="index.html">HOME</a>
 				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="#">CADASTRO</a>
+				<a class="a-menu" href="#">NEWSLETTER</a>
 			</div>
 		</nav>
 	</header>
