--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<a class="a-menu" href="#">HOME</a>
 				<a class="a-menu" href="biografia.html">BIOGRAFIA</a>
 				<a class="a-menu" href="eras.html">ERAS</a>
-				<a class="a-menu" href="contato.html">CADASTRO</a>
+				<a class="a-menu" href="contato.html">NEWSLETTER</a>
 			</div>
 		</nav>
 	</header>
@@ -25,19 +25,22 @@
 				<h2 id="not-titulo">Últimas Notícias</h2>
 				<div class="card-not">
 					<div><img id="not-img" src="img/img-noticia1.png"></div>
-					<div><p id="not-text">25/06 Primeira noite da The Eras Tour em Minneapolis tem agradecimento de Taylor e música surpresa do Lover.</p></div>
+					<div><p id="not-text">25/06</p>
+						<p id="not-text2">Primeira noite da The Eras Tour em Minneapolis tem agradecimento de Taylor e música surpresa do Lover.</p></div>
 				</div>
 				<div class="card-not">
 					<div><img id="not-img" src="img/img-noticia2.png"></div>
-					<div><p id="not-text">10/05 A última noite em Detroit nos deixou apenas mais 3 músicas do 1989 que ainda não foram tocadas – saiba tudo o que rolou!</p></div>
+					<div><p id="not-text">10/05</p>
+						<p id="not-text2">A última noite em Detroit nos deixou apenas mais 3 músicas do 1989 que ainda não foram tocadas – saiba tudo o que rolou!</p></div>
 				</div>
 				<div class="card-not">
 					<div><img id="not-img" src="img/img-noticia3.png"></div>
-					<div><p id="not-text">17/06 The Eras Tour em Pittsburgh – Cruel Summer em “a volta dos que não foram” e homenagem de Taylor ao seu pai</p></div>
+					<div><p id="not-text">17/06</p>
+						<p id="not-text2"> The Eras Tour em Pittsburgh – Cruel Summer em “a volta dos que não foram” e homenagem de Taylor ao seu pai</p></div>
 				</div>
 
-					<button id="botao-noticia"><a href="contato.html" target="_blank">Clique aqui para receber notícias pelo seu e-mail</a></button>
-	</div>
+					<a id="botao-noticia" href="contato.html" target="_blank">Clique aqui para receber notícias pelo seu e-mail</a>
+				</div>
 
 			</aside>
 
